--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,13 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
+
+    namespace 'org.jaudiotagger'
 
     defaultConfig {
         minSdk 23
-        targetSdk 32
+        targetSdk 33
 
         consumerProguardFiles "consumer-rules.pro"
     }
