--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.4.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.0"
+    }
+}
+
+
 plugins {
-    id 'com.android.application' version '8.0.0-beta04' apply false
-    id 'com.android.library' version '8.0.0-beta04' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+    id 'org.jetbrains.kotlin.android' version "1.8.0" apply false
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
