--- a/jaudiotagger-android/build.gradle
+++ b/jaudiotagger-android/build.gradle
@@ -1,5 +1,16 @@
 plugins {
     id 'com.android.library'
+    id 'maven-publish'
+}
+
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+            }
+        }
+    }
 }
 
 android {
